Fix small user display collapse bug

--- a/styles.less
+++ b/styles.less
@@ -164,6 +164,7 @@ html {
     }
     div {
         .side-bar-transition;
+        min-width: 120px;
         padding-left: 15px;
         >span {
             font-size: 22px;
